<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context=".filter.FilterFragment">

    <!-- Toolbar -->
    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Date filter -->
    <TextView
        android:id="@+id/date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_space"
        android:paddingHorizontal="@dimen/medium_space"
        android:text="@string/filter_fragment_date_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar"
        tools:text="Con fecha de emisión" />

    <TextView
        android:id="@+id/date_start_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_space"
        android:paddingHorizontal="@dimen/medium_space"
        android:text="@string/filter_fragment_date_start"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_title"
        tools:text="Desde:" />

    <TextView

        android:id="@+id/date_end_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_fragment_date_end"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date_start_title"
        tools:text="Hasta:" />

    <Button
        android:id="@+id/date_from_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_space"
        android:layout_marginTop="@dimen/small_space"
        android:backgroundTint="@color/light_grey"
        android:onClick="openCalendar"
        android:paddingHorizontal="@dimen/medium_space"
        android:text="@string/filter_fragment_date_button"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_start_title" />

    <Button
        android:id="@+id/date_until_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        android:onClick="openCalendar"
        android:paddingHorizontal="@dimen/medium_space"
        android:text="@string/filter_fragment_date_button"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/date_end_title"
        app:layout_constraintTop_toTopOf="@+id/date_from_button" />

    <View
        android:id="@+id/filter_divider_date"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/medium_space"
        android:layout_marginVertical="@dimen/medium_space"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_from_button" />

    <!-- Amount filter -->
    <TextView
        android:id="@+id/filter_amount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/medium_space"
        android:paddingHorizontal="@dimen/medium_space"
        android:text="@string/filter_fragment_amount_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_divider_date"
        tools:text="Por un importe" />

    <TextView
        android:id="@+id/filter_amount_min_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_fragment_amount_min_selected"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toStartOf="@+id/filter_amount_selected_separator"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filter_amount_selected_separator"
        tools:text="5 €" />

    <TextView
        android:id="@+id/filter_amount_selected_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/medium_space"
        android:paddingStart="@dimen/small_space"
        android:paddingEnd="@dimen/small_space"
        android:text="-"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_amount_title"
        tools:text="-" />

    <TextView
        android:id="@+id/filter_amount_max_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_fragment_amount_max_selected"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/filter_amount_selected_separator"
        app:layout_constraintTop_toTopOf="@+id/filter_amount_selected_separator"
        tools:text="250 €" />

    <TextView
        android:id="@+id/filter_amount_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_space"
        android:text="@string/filter_fragment_amount_min_value"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_amount_selected_separator"
        tools:text="1 €" />

    <TextView
        android:id="@+id/filter_amount_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_space"
        android:text="@string/filter_fragment_amount_max_value"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filter_amount_min"
        tools:text="300 €" />

    <SeekBar
        android:id="@+id/filter_amount_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_space"
        android:layout_marginVertical="@dimen/small_space"
        android:progressBackgroundTint="@color/dark_grey"
        android:progressTint="@color/secondary"
        android:thumbTint="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_amount_min" />

    <View
        android:id="@+id/filter_divider_amount"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/medium_space"
        android:layout_marginVertical="@dimen/medium_space"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_amount_seekbar" />

    <!-- Status filter -->
    <TextView
        android:id="@+id/filter_status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_space"
        android:layout_marginVertical="@dimen/medium_space"
        android:text="@string/filter_fragment_status_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_divider_amount"
        tools:text="Por estado" />

    <CheckBox
        android:id="@+id/checkbox_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_space"
        android:layout_marginVertical="@dimen/medium_space"
        android:checked="false"
        android:text="@string/filter_fragment_paid"
        app:buttonTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_status_title"
        tools:text="@string/filter_fragment_paid" />

    <CheckBox
        android:id="@+id/checkbox_cancelled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_space"
        android:text="@string/filter_fragment_cancelled"
        app:buttonTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_paid"
        tools:text="@string/filter_fragment_cancelled" />

    <CheckBox
        android:id="@+id/checkbox_fixed_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_space"
        android:text="@string/filter_fragment_fixed_fee"
        app:buttonTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_cancelled"
        tools:text="@string/filter_fragment_fixed_fee" />

    <CheckBox
        android:id="@+id/checkbox_pending_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_space"
        android:text="@string/filter_fragment_pending_payment"
        app:buttonTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_fixed_fee"
        tools:text="@string/filter_fragment_pending_payment" />

    <CheckBox
        android:id="@+id/checkbox_payment_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_space"
        android:text="@string/filter_fragment_status_payment_plan"
        app:buttonTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_pending_payment"
        tools:text="@string/filter_fragment_status_payment_plan" />

    <View
        android:id="@+id/filter_divider_status"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/medium_space"
        android:layout_marginVertical="@dimen/medium_space"
        android:background="?android:attr/listDivider"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_payment_plan" />

    <!-- Filter buttons -->
    <Button
        android:id="@+id/filter_apply_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_space"
        android:backgroundTint="@color/secondary"
        android:text="@string/filter_fragment_apply_button"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_divider_status"
        app:layout_constraintWidth_percent="0.5"
        tools:text="@string/filter_fragment_apply_button" />

    <Button
        android:id="@+id/filter_delete_filters_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_space"
        android:backgroundTint="@color/light_grey"
        android:text="@string/filter_fragment_delete_filters_button"
        android:textColor="@android:color/black"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_apply_button"
        app:layout_constraintWidth_percent="0.5"
        tools:text="@string/filter_fragment_delete_filters_button" />

    <View
        android:id="@+id/filter_divider_status3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/medium_space"
        android:layout_marginVertical="@dimen/medium_space"
        android:background="?android:attr/listDivider"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_delete_filters_button" />
</androidx.constraintlayout.widget.ConstraintLayout>